Melhorando as cores do formulario

--- a/web/src/pages/CreatePoint/styles.css
+++ b/web/src/pages/CreatePoint/styles.css
@@ -85,10 +85,17 @@
     flex: 1;
     background: #F0F0F5;
     border-radius: 8px;
-    border: 0;
+    border: 1px solid #6C6C80;
     padding: 16px 24px;
     font-size: 16px;
     color: #6C6C80;
+  }
+
+
+  #page-create-point form .field input[type=text]:focus,
+  #page-create-point form .field input[type=email]:focus,
+  #page-create-point form .field input[type=number]:focus {
+    border: 1px solid #2FB86E;
   }
   
   #page-create-point form .field select {
@@ -98,10 +105,14 @@
     flex: 1;
     background: #F0F0F5;
     border-radius: 8px;
-    border: 0;
+    border: 1px solid #6C6C80;
     padding: 16px 24px;
     font-size: 16px;
     color: #6C6C80;
+  }
+
+  #page-create-point form .field select:focus {
+    border: 1px solid #2FB86E;
   }
   
   #page-create-point form .field input::placeholder {
